--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "css-loader": "^0.28.11",
     "html-webpack-plugin": "^3.2.0",
